--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ thiserror = "1.0.37"
 
 
 spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
+spl-associated-token-account = { version = "1.1.1", features = [
+  "no-entrypoint",
+] }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
