--- a/ts/package.json
+++ b/ts/package.json
@@ -15,5 +15,24 @@
     "amman:start": "DEBUG='amman:(info|error)' amman start",
     "amman:stop": "amman stop",
     "api:gen": "solita"
+  },
+  "dependencies": {
+    "@metaplex-foundation/beet": "^0.7.1",
+    "@metaplex-foundation/beet-solana": "^0.4.0",
+    "@metaplex-foundation/cusper": "^0.0.2",
+    "@solana/web3.js": "^1.73.0"
+  },
+  "devDependencies": {
+    "@metaplex-foundation/amman": "^0.12.1",
+    "@metaplex-foundation/amman-client": "^0.2.4",
+    "@metaplex-foundation/solita": "^0.19.3",
+    "@types/tape": "^4.13.2",
+    "esbuild": "^0.16.12",
+    "esbuild-runner": "^2.2.2",
+    "rimraf": "^3.0.2",
+    "spok": "^1.4.3",
+    "tap-spec": "^5.0.0",
+    "tape": "^5.6.1",
+    "typescript": "^4.9.4"
   }
 }
