fix: add missing deps
- those are due to incorrect setup inside amman-client and web3.js

--- a/ts/package.json
+++ b/ts/package.json
@@ -26,6 +26,10 @@
     "@metaplex-foundation/amman": "^0.12.1",
     "@metaplex-foundation/amman-client": "^0.2.4",
     "@metaplex-foundation/solita": "^0.19.3",
+    "@types/bn.js": "^5.1.1",
+    "@types/deep-diff": "^1.0.2",
+    "@types/diff": "^5.0.2",
+    "@types/node-fetch": "^2.6.2",
     "@types/tape": "^4.13.2",
     "esbuild": "^0.16.12",
     "esbuild-runner": "^2.2.2",
