--- a/ts/package.json
+++ b/ts/package.json
@@ -20,6 +20,7 @@
     "@metaplex-foundation/beet": "^0.7.1",
     "@metaplex-foundation/beet-solana": "^0.4.0",
     "@metaplex-foundation/cusper": "^0.0.2",
+    "@solana/spl-token": "^0.3.6",
     "@solana/web3.js": "^1.73.0"
   },
   "devDependencies": {
