--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -9,6 +9,14 @@ crate-type = ["cdylib", "lib"]
 name = "challenge"
 doctest = false
 
+[[bin]]
+name = "dump_shank_accounts"
+path = "bin/dump_shank_accounts.rs"
+
+[[bin]]
+name = "hash"
+path = "bin/hash.rs"
+
 [features]
 no-entrypoint = []
 cpi = ["no-entrypoint"]
@@ -17,7 +25,7 @@ test-sbf = []
 [dependencies]
 borsh = "0.9.3"
 solana-program = "^1.14.5"
-shank = { git = "https://github.com/metaplex-foundation/shank", branch = "thlorenz/feat/pda-knowledge" }
+shank = { version = "0.0.11", git = "https://github.com/metaplex-foundation/shank", branch = "thlorenz/feat/pda-knowledge" }
 
 num-derive = "0.3.3"
 num-traits = "0.2.15"
